OpenDreamCore/common/src/main/java/com/opendreamcore/script/antlr/DreamLangParser.java
// Generated from DreamLang.g4 by ANTLR 4.13.1
package com.opendreamcore.script.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class DreamLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, ELSE=2, LOOP=3, FOR_EACH=4, WHILE=5, FOR=6, FUNCTION=7, RETURN=8, 
		ARROW=9, BREAK=10, CONTINUE=11, AWAIT=12, IMPORT=13, EXPORT=14, FROM=15, 
		AS=16, CLASS=17, NAMESPACE=18, NEW=19, THIS=20, EXTENDS=21, TRY=22, CATCH=23, 
		FINALLY=24, THROW=25, VAR=26, CONST=27, STATIC=28, DEFAULT=29, BOOLEAN=30, 
		NULL=31, JAVA=32, IDENTIFIER=33, NUMBER=34, MC_COLOR_STRING=35, MC_SECTION_COLOR_STRING=36, 
		STRING=37, COMMA=38, SEMICOLON=39, LPAREN=40, RPAREN=41, LBRACE=42, RBRACE=43, 
		LBRACKET=44, RBRACKET=45, DOT=46, ASSIGN=47, PLUS=48, MINUS=49, MULT=50, 
		DIV=51, MOD=52, EQ=53, NEQ=54, LT=55, GT=56, LE=57, GE=58, AND=59, OR=60, 
		NOT=61, TERNARY=62, NULL_COALESCE=63, COLON=64, PIPE=65, INT=66, WHITESPACE=67, 
		COMMENT=68, LINE_COMMENT=69;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_loopStatement = 2, RULE_awaitStatement = 3, 
		RULE_forEachStatement = 4, RULE_whileStatement = 5, RULE_forStatement = 6, 
		RULE_forInit = 7, RULE_ifStatement = 8, RULE_returnStatement = 9, RULE_breakStatement = 10, 
		RULE_continueStatement = 11, RULE_functionDefinitionStatement = 12, RULE_varDeclaration = 13, 
		RULE_importStatement = 14, RULE_exportStatement = 15, RULE_exportList = 16, 
		RULE_classStatement = 17, RULE_classBody = 18, RULE_classMember = 19, 
		RULE_namespaceStatement = 20, RULE_namespaceBody = 21, RULE_namespaceMember = 22, 
		RULE_constDeclaration = 23, RULE_tryStatement = 24, RULE_catchClause = 25, 
		RULE_throwStatement = 26, RULE_javaCallStatement = 27, RULE_argumentList = 28, 
		RULE_parameterList = 29, RULE_blockStatement = 30, RULE_expression = 31, 
		RULE_pipeExpression = 32, RULE_pipeTarget = 33, RULE_ternaryExpression = 34, 
		RULE_nullCoalesceExpression = 35, RULE_orExpression = 36, RULE_andExpression = 37, 
		RULE_equalityExpression = 38, RULE_relationalExpression = 39, RULE_additiveExpression = 40, 
		RULE_multiplicativeExpression = 41, RULE_unaryExpression = 42, RULE_lambdaExpression = 43, 
		RULE_lambdaBody = 44, RULE_primary = 45, RULE_atom = 46, RULE_suffix = 47;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "loopStatement", "awaitStatement", "forEachStatement", 
			"whileStatement", "forStatement", "forInit", "ifStatement", "returnStatement", 
			"breakStatement", "continueStatement", "functionDefinitionStatement", 
			"varDeclaration", "importStatement", "exportStatement", "exportList", 
			"classStatement", "classBody", "classMember", "namespaceStatement", "namespaceBody", 
			"namespaceMember", "constDeclaration", "tryStatement", "catchClause", 
			"throwStatement", "javaCallStatement", "argumentList", "parameterList", 
			"blockStatement", "expression", "pipeExpression", "pipeTarget", "ternaryExpression", 
			"nullCoalesceExpression", "orExpression", "andExpression", "equalityExpression", 
			"relationalExpression", "additiveExpression", "multiplicativeExpression", 
			"unaryExpression", "lambdaExpression", "lambdaBody", "primary", "atom", 
			"suffix"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "'=>'", null, null, 
			null, null, null, "'from'", "'as'", null, null, "'new'", null, "'extends'", 
			null, null, null, null, null, null, "'static'", "'default'", null, null, 
			null, null, null, null, null, null, "','", "';'", "'('", "')'", "'{'", 
			"'}'", "'['", "']'", "'.'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", 
			"'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'&&'", "'||'", "'!'", 
			"'?'", "'??'", "':'", "'|'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IF", "ELSE", "LOOP", "FOR_EACH", "WHILE", "FOR", "FUNCTION", "RETURN", 
			"ARROW", "BREAK", "CONTINUE", "AWAIT", "IMPORT", "EXPORT", "FROM", "AS", 
			"CLASS", "NAMESPACE", "NEW", "THIS", "EXTENDS", "TRY", "CATCH", "FINALLY", 
			"THROW", "VAR", "CONST", "STATIC", "DEFAULT", "BOOLEAN", "NULL", "JAVA", 
			"IDENTIFIER", "NUMBER", "MC_COLOR_STRING", "MC_SECTION_COLOR_STRING", 
			"STRING", "COMMA", "SEMICOLON", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
			"LBRACKET", "RBRACKET", "DOT", "ASSIGN", "PLUS", "MINUS", "MULT", "DIV", 
			"MOD", "EQ", "NEQ", "LT", "GT", "LE", "GE", "AND", "OR", "NOT", "TERNARY", 
			"NULL_COALESCE", "COLON", "PIPE", "INT", "WHITESPACE", "COMMENT", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DreamLang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DreamLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(DreamLangParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(DreamLangParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(DreamLangParser.SEMICOLON, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DreamLangListener ) ((DreamLangListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DreamLangListener ) ((DreamLangListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DreamLangVisitor ) return ((DreamLangVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2306411730769444346L) != 0)) {
				{
				{
				setState(96);
				statement();
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMICOLON) {
					{
					setState(97);
					match(SEMICOLON);
					}
				}

				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VarDeclarationContext varDeclaration() {
			return getRuleContext(VarDeclarationContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(DreamLangParser.SEMICOLON, 0); }
		public LoopStatementContext loopStatement() {
			return getRuleContext(LoopStatementContext.class,0);
		}
		public ForEachStatementContext forEachStatement() {
			return getRuleContext(ForEachStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public AwaitStatementContext awaitStatement() {
			return getRuleContext(AwaitStatementContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public BreakStatementContext breakStatement() {
			return getRuleContext(BreakStatementContext.class,0);
		}
		public ContinueStatementContext continueStatement() {
			return getRuleContext(ContinueStatementContext.class,0);
		}
		public FunctionDefinitionStatementContext functionDefinitionStatement() {
			return getRuleContext(FunctionDefinitionStatementContext.class,0);
		}
		public ImportStatementContext importStatement() {
			return getRuleContext(ImportStatementContext.class,0);
		}
		public ExportStatementContext exportStatement() {
			return getRuleContext(ExportStatementContext.class,0);
		}
		public ClassStatementContext classStatement() {
			return getRuleContext(ClassStatementContext.class,0);
		}
		public NamespaceStatementContext namespaceStatement() {
			return getRuleContext(NamespaceStatementContext.class,0);
		}
		public TryStatementContext tryStatement() {
			return getRuleContext(TryStatementContext.class,0);
		}
		public ThrowStatementContext throwStatement() {
			return getRuleContext(ThrowStatementContext.class,0);
		}
		public JavaCallStatementContext javaCallStatement() {
			return getRuleContext(JavaCallStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DreamLangListener ) ((DreamLangListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DreamLangListener ) ((DreamLangListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DreamLangVisitor ) return ((DreamLangVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(141);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOLEAN:
			case NULL:
			case IDENTIFIER:
			case NUMBER:
			case MC_COLOR_STRING:
			case MC_SECTION_COLOR_STRING:
			case STRING:
			case LPAREN:
			case LBRACE:
			case MINUS:
			case NOT:
				enterOuterAlt(_localctx, 1);
				{
				setState(107);
				expression();
				}
				break;
			case VAR:
			case CONST:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				varDeclaration();
				setState(110);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(109);
					match(SEMICOLON);
					}
					break;
				}
				}
				break;
			case LOOP:
				enterOuterAlt(_localctx, 3);
				{
				setState(112);
				loopStatement();
				}
				break;
			case FOR_EACH:
				enterOuterAlt(_localctx, 4);
				{
				setState(113);
				forEachStatement();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 5);
				{
				setState(114);
				whileStatement();
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 6);
				{
				setState(115);
				forStatement();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 7);
				{
				setState(116);
				ifStatement();
				}
				break;
			case AWAIT:
				enterOuterAlt(_localctx, 8);
				{
				setState(117);
				awaitStatement();
				}
				break;
			case RETURN:
				enterOuterAlt(_localctx, 9);
				{
				setState(118);
				returnStatement();
				}
				break;
			case BREAK:
				enterOuterAlt(_localctx, 10);
				{
				setState(119);
				breakStatement();
				}
				break;
			case CONTINUE:
				enterOuterAlt(_localctx, 11);
				{
				setState(120);
				continueStatement();
				}
				break;
			case FUNCTION:
				enterOuterAlt(_localctx, 12);
				{
				setState(121);
				functionDefinitionStatement();
				}
				break;
			case IMPORT:
				enterOuterAlt(_localctx, 13);
				{
				setState(122);
				importStatement();
				setState(124);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(123);
					match(SEMICOLON);
					}
					break;
				}
				}
				break;
			case EXPORT:
				enterOuterAlt(_localctx, 14);
				{
				setState(126);
				exportStatement();
				setState(128);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(127);
					match(SEMICOLON);
					}
					break;
				}
				}
				break;
			case CLASS:
				enterOuterAlt(_localctx, 15);
				{
				setState(130);
				classStatement();
				}
				break;
			case NAMESPACE:
				enterOuterAlt(_localctx, 16);
				{
				setState(131);
				namespaceStatement();
				}
				break;
			case TRY:
				enterOuterAlt(_localctx, 17);
				{
				setState(132);
				tryStatement();
				}
				break;
			case THROW:
				enterOuterAlt(_localctx, 18);
				{
				setState(133);
				throwStatement();
				setState(135);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(134);
					match(SEMICOLON);
					}
					break;
				}
				}
				break;
			case NEW:
			case JAVA:
				enterOuterAlt(_localctx, 19);
				{
				setState(137);
				javaCallStatement();
				setState(139);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(138);
					match(SEMICOLON);
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LoopStatementContext extends ParserRuleContext {
		public TerminalNode LOOP() { return getToken(DreamLangParser.LOOP, 0); }
		public TerminalNode LPAREN() { return getToken(DreamLangParser.LPAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(DreamLangParser.COMMA, 0); }
		public BlockStatementContext blockStatement() {
			return getRuleContext(BlockStatementContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(DreamLangParser.RPAREN, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public LoopStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loopStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DreamLangListener ) ((DreamLangListener)listener).enterLoopStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DreamLangListener ) ((DreamLangListener)listener).exitLoopStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DreamLangVisitor ) return ((DreamLangVisitor<? extends T>)visitor).visitLoopStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LoopStatementContext loopStatement() throws RecognitionException {
		LoopStatementContext _localctx = new LoopStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_loopStatement);
		try {
			setState(156);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(143);
				match(LOOP);
				setState(144);
				match(LPAREN);
				setState(145);
				expression();
				setState(146);
				match(COMMA);
				setState(147);
				blockStatement();
				setState(148);
				match(RPAREN);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(150);
				match(LOOP);
				setState(151);
				match(LPAREN);
				setState(152);
				expression();
				setState(153);
				match(RPAREN);
				setState(154);
				statement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AwaitStatementContext extends ParserRuleContext {
		public TerminalNode AWAIT() { return getToken(DreamLangParser.AWAIT, 0); }
		public TerminalNode LPAREN() { return getToken(DreamLangParser.LPAREN, 0); }
		public BlockStatementContext blockStatement() {
			return getRuleContext(BlockStatementContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(DreamLangParser.COMMA, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(DreamLangParser.RPAREN, 0); }
		public AwaitStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_awaitStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DreamLangListener ) ((DreamLangListener)listener).enterAwaitStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DreamLangListener ) ((DreamLangListener)listener).exitAwaitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DreamLangVisitor ) return ((DreamLangVisitor<? extends T>)visitor).visitAwaitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AwaitStatementContext awaitStatement() throws RecognitionException {
		AwaitStatementContext _localctx = new AwaitStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_awaitStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(AWAIT);
			setState(159);
			match(LPAREN);
			setState(160);
			blockStatement();
			setState(161);
			match(COMMA);
			setState(162);
			expression();
			setState(163);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
